# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS
pre_commit_hooks/: __init__.py  check_git_user_email.py  check_prohibited_filenames.py  util.py
testing/: util.py
tests/: conftest.py  util_test.py
tests/pre_commit_hooks/: __init__.py  check_git_user_email_cli_test.py  check_git_user_email_test.py  check_prohibited_filenames_action_test.py  check_prohibited_filenames_test.py  check_prohibited_filenames_windows_flavors_test.py  util_test.py
